<resources>
    <string name="app_name" translatable="false">EduMan</string>
    <string name="default_grade_weighting" translatable="false">1.0</string>
    <string name="date_with_subject" translatable="false">%1$s ∙ %2$s</string>
    <string name="save">Save</string>
    <string name="details">Details</string>
    <string name="grade">Grade</string>
    <string name="grades">Grades</string>
    <string name="test">Test</string>
    <string name="weighting">Weighting</string>
    <string name="total">Total</string>
    <string name="teacher_colon">Teacher:</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="edit">Edit</string>
    <string name="grade_colon">Grade:</string>
    <string name="weighting_value">Weighting: %1$s</string>
    <string name="upcoming">Upcoming tests</string>
    <string name="dashboard">Dashboard</string>
    <string name="subject">Subject</string>
    <string name="subjects">Subjects</string>
    <string name="cd_average">Average icon</string>
    <string name="cd_test">Test icon</string>
    <string name="cd_open_new_view">Button to open the corresponding view</string>
    <string name="no_subjects_added_yet">No subjects have been created yet</string>
    <string name="subject_empty">Nothing is going on here yet. Add a new grade or test.</string>
    <string name="name_of_subject">Subject name</string>
    <string name="name_of_teacher">Teacher name</string>
    <string name="select_color">Select color</string>
    <string name="tests">Tests</string>
    <string name="add_grade">Add grade</string>
    <string name="error_grade_not_in_range">Grade has to be in the range between 1.0 and 6.0</string>
    <string name="error_not_a_number">Has to be a number</string>
    <string name="add_test">Add test</string>
    <string name="topic">Topic</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="format_date_default">yyyy/dd/MM</string>
    <string name="format_time_default">hh:mm a</string>
    <string name="format_date_time_default">yyyy/dd/MM, hh:mm a</string>
    <string name="error_blank">Must be specified</string>
    <string name="error_not_a_float">Must be a valid point number</string>
    <string name="error_not_in_range">Has to be in the range between %1$.1f and %2$.1f</string>
    <string name="no_tests_added_yet">No tests have been added yet</string>
    <string name="setup_assistant">EduMan setup assistant</string>
    <string name="setup_assistant_step1">Step 1 ∙ Set name</string>
    <string name="setup_assistant_step2">Step 2 ∙ Set a PIN</string>
    <string name="setup_assistant_step3">Step 3 ∙ Complete setup</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="setup_welcome">Welcome to EduMan. Our setup assistant will ask you a few questions right away. Then you can start right away!</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="setup_question_name">How should we call you?</string>
    <string name="name">Name</string>
    <string name="data_saved_only_local">These data are only saved locally.</string>
    <string name="hint_pin" translatable="false">0</string>
    <string name="setup_question_pin">Please set a PIN now</string>
    <string name="skip">Skip</string>
    <string name="or">Or</string>
    <string name="pin">PIN</string>
    <string name="dont_use_pin">Don\'t use a PIN</string>
    <string name="pin_not_used">PIN is not used</string>
    <string name="title_login">EduMan ∙ Login</string>
    <string name="error_wrong_pin">Unfortunately this PIN is not correct</string>
    <string name="settings">Settings</string>
    <string name="libraries">Libraries</string>
    <string name="imprint">Imprint</string>
    <string name="app_settings">App-Settings</string>
    <string name="app_info">App-Information</string>
    <string name="use_pin">Request PIN when starting the app</string>
    <string name="info_tmg">According to § 5 TMG</string>
    <string name="imprint_name" translatable="false">Daniel Reinhold</string>
    <string name="imprint_street" translatable="false">Forstweg 71</string>
    <string name="imprint_city" translatable="false">08280 Aue</string>
    <string name="represented_by">Represented by:</string>
    <string name="contact_colon">Contact:</string>
    <string name="imprint_telephone">Phone: 03771–4973876</string>
    <string name="imprint_email">E-Mail: daniel.reinhold261201@gmail.com</string>
    <string name="disclaimer_of_liability">Disclaimer of liability</string>
    <string name="liability_for_content">Liability for content</string>
    <string name="liability_for_content_text">The contents of our pages were created with great care. However, we cannot accept any liability for the correctness, completeness and topicality of the content. As a service provider, we are responsible for our own content on these pages in accordance with general law in accordance with Section 7 (1) of the German Telemedia Act. According to §§ 8 to 10 TMG, as a service provider, we are not obliged to monitor transmitted or stored third-party information or to research circumstances that indicate illegal activity. Obligations to remove or block the use of information according to general laws remain unaffected. However, liability in this regard is only possible from the point in time at which we become aware of a specific legal violation. As soon as we become aware of such legal violations, we will remove this content immediately.</string>
    <string name="liability_for_links">Liability for links</string>
    <string name="data_protection_intro">With the following data protection declaration, we would like to explain to you which types of your personal data (hereinafter also referred to as \"data\" for short) we process for which purposes and to what extent in the context of the provision of our application.</string>
    <string name="data_protection_state">State: 01/11/2022</string>
    <string name="responsible_person_colon">Responsible person:</string>
    <string name="overview_of_processing">Overview of the processing</string>
    <string name="data_protection_overview_1">The following overview summarizes the types of data processed and the purposes of their processing and refers to the data subjects.</string>
    <string name="data_protection_overview_2">Types of data processed</string>
    <string name="usage_data_enum">• Usage data</string>
    <string name="meta_communication_data_enum">• Meta / communication data</string>
    <string name="user_enum">• Users</string>
    <string name="reason_of_data_processing_1">• Provision of our online offer and user-friendliness</string>
    <string name="categories_of_persons">Categories of data subjects</string>
    <string name="reason_of_data_processing">Purposes of processing</string>
    <string name="legal_bases">Relevant legal bases</string>
    <string name="legal_bases_text">In the following you will find an overview of the legal bases of the GDPR, on the basis of which we process personal data. Please note that in addition to the provisions of the GDPR, national data protection requirements may apply in your or our country of residence or domicile. If more specific legal bases are relevant in individual cases, we will inform you of this in the data protection declaration. In addition to the data protection regulations of the General Data Protection Regulation, national data protection regulations apply in Germany. This includes in particular the law on the protection against misuse of personal data during data processing (Federal Data Protection Act - BDSG). The BDSG contains in particular special regulations on the right to information, the right to erasure, the right of objection, the processing of special categories of personal data, processing for other purposes and transmission as well as automated decision-making in individual cases including profiling. It also regulates data processing for the purposes of the employment relationship (Section 26 BDSG), in particular with regard to the establishment, implementation or termination of employment relationships and the consent of employees. Furthermore, state data protection laws of the individual federal states can be applied.</string>
    <string name="data_protection_plugins">Plugins, embedded functions and content</string>
    <string name="data_protection_plugins_text">We incorporate functional and content elements into our online offering that are obtained from the servers of their respective providers (hereinafter referred to as \"third-party providers\"). This can be, for example, graphics, videos or city maps (hereinafter uniformly referred to as \"content\") ). The integration always presupposes that the third-party providers of this content process the IP address of the users, since without the IP address they would not be able to send the content to their browser. The IP address is therefore required for the display of this content or functions. We strive to only use content whose respective providers only use the IP address to deliver the content. Third-party providers can also use so-called pixel tags (invisible graphics, also known as \"web beacons\") for statistical or marketing purposes. The \"pixel tags\" can be used to evaluate information such as visitor traffic on the pages of this website. The pseudonymous information can also be stored in cookies on the user\'s device and contain, among other things, technical information about the browser and operating system, the websites to be referred to, the time of visit and other information about the use of our online offer, as well as being linked to such information from other sources.</string>
    <string name="info_legal_bases">Notes on legal bases</string>
    <string name="info_legal_bases_text">If we ask users for their consent to the use of third-party providers, the legal basis for processing data is consent. Otherwise, user data will be processed on the basis of our legitimate interests (i.e. interest in efficient, economical and recipient-friendly services). In this context, we would like to draw your attention to the information on the use of cookies in this data protection declaration.</string>
    <string name="data_protection_frameworks">Integration of third-party software, scripts or frameworks (e.g. jQuery)</string>
    <string name="data_protection_frameworks_text">We integrate software into our online offer that we access from servers of other providers (e.g. function libraries that we use for the purpose of displaying or user-friendliness of our online offer). The respective providers collect the user\'s IP address and can process it for the purposes of transmitting the software to the user\'s browser and for security purposes as well as for evaluating and optimizing their offer. - We integrate software into our online offer that we access from servers of other providers (e.g. function libraries that we use for the purpose of displaying or user-friendliness of our online offer). The respective providers collect the user\'s IP address and can process it for the purposes of transmitting the software to the user\'s browser and for security purposes as well as for evaluating and optimizing their offer.</string>
    <string name="duration_lesson_in_minutes">Lesson duration in minutes</string>
    <string name="set_lesson_duration">Set lesson duration</string>
</resources>