<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="@dimen/default_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:textColor="@color/text"
            android:textSize="18sp"
            android:text="@string/data_protection_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:textColor="@color/text"
            android:textSize="18sp"
            android:text="@string/data_protection_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="@dimen/default_margin"
            style="@style/DefaultCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="@dimen/small_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:textStyle="bold"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/responsible_person_colon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginTop="@dimen/small_margin"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/imprint_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/imprint_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/imprint_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginTop="@dimen/small_margin"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/imprint_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/imprint_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="@dimen/default_margin"
            style="@style/DefaultCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="@dimen/small_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:textStyle="bold"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/overview_of_processing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginTop="@dimen/small_margin"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/data_protection_overview_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginTop="@dimen/default_margin"
                    android:textStyle="bold"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/data_protection_overview_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginTop="@dimen/small_margin"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/usage_data_enum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/meta_communication_data_enum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginTop="@dimen/default_margin"
                    android:textStyle="bold"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/categories_of_persons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginTop="@dimen/small_margin"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/user_enum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginTop="@dimen/default_margin"
                    android:textStyle="bold"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/reason_of_data_processing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginTop="@dimen/small_margin"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/reason_of_data_processing_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="@dimen/default_margin"
            style="@style/DefaultCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="@dimen/small_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:textStyle="bold"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/legal_bases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:justificationMode="inter_word"
                    android:layout_marginTop="@dimen/small_margin"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/legal_bases_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="@dimen/default_margin"
            style="@style/DefaultCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="@dimen/small_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:textStyle="bold"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/data_protection_plugins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:justificationMode="inter_word"
                    android:layout_marginTop="@dimen/small_margin"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/data_protection_plugins_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginTop="@dimen/default_margin"
                    android:textStyle="bold"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/info_legal_bases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:justificationMode="inter_word"
                    android:layout_marginTop="@dimen/small_margin"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/info_legal_bases_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="@dimen/default_margin"
            style="@style/DefaultCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="@dimen/small_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:textStyle="bold"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/data_protection_frameworks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:justificationMode="inter_word"
                    android:layout_marginTop="@dimen/small_margin"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:text="@string/data_protection_frameworks_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>