<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_bottom_sheet_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:padding="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_grade"
        android:textColor="@color/text"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold" />

    <LinearLayout
        android:paddingHorizontal="@dimen/default_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialogAddGradeTextFieldGrade"
            android:hint="@string/grade"
            style="@style/DialogTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/extra_small_margin"
            android:id="@+id/dialogAddGradeTextFieldWeighting"
            android:hint="@string/weighting"
            style="@style/DialogTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@string/default_grade_weighting"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:enabled="false"
            android:id="@+id/dialogAddGradeButtonSave"
            android:layout_marginBottom="@dimen/default_margin"
            style="@style/DefaultButton"
            android:layout_marginTop="@dimen/default_margin"
            app:icon="@drawable/icon_save"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>